@@ -164,6 +164,7 @@ Otherwise, You can have helm-based completion with run the following code, after
     - Git repository identification is based on the current file's path
     - Multiple Aider sessions can run simultaneously for different Git repositories
     - When being called with the universal argument (~C-u~), a prompt will offer the user to change the content of ~aider-args~ for this session.
+    - When run it in a dired directory, it will ask you if you want to add [[https://aider.chat/docs/config/options.html#--subtree-only][--subtree-only flag]], which only consider files in that dired subtree, to make it faster
   - aider-switch-to-buffer :: Switch to the Aider buffer.
     - use ~^~ in the menu to toggle open aider session in other window inside current frame, or open a dedicate frame for aider session. This is useful when there is more than one monitor, and one frame / monitor is used to hold multi buffers for code, and another frame / monitor hold aider session.
 
@@ -286,6 +287,10 @@ Otherwise, You can have helm-based completion with run the following code, after
 
 - In large mono repo, aider take long time to scan the repo. How to improve?
   - Aider use .aiderignore file to handle this, [[https://aider.chat/docs/faq.html#can-i-use-aider-in-a-large-mono-repo][detail]], or, you can turn off git with --no-git in aider-args.
+  - Or, use the --subtree-only with following way in emacs:
+    - Used dired to open the directory (subtree) to be included
+    - C-c a a to trigger aider-run-aider
+    - Answer yes about --subtree-only question, it will add the flag
    
 - How to let aider work with your speaking language?
   - use [[https://aider.chat/docs/usage/conventions.html#specifying-coding-conventions][aider coding conventions]]. In my case, I added "- reply in Chinese" to the CONVENTIONS.md file, and load work through [[https://aider.chat/docs/config/aider_conf.html][.aider.conf.yml]]. Or, put sth like following into aider-args variable. 
@@ -310,12 +315,11 @@ Otherwise, You can have helm-based completion with run the following code, after
   - [X] Current aider-ask-question need to be improved, since there could be so many different question to ask
   - [X] How to port the candidate list feature to aider-plain-read-string
   - [ ] Thinking on how to improve the candidate list for the function
-- More thinking on how to simplify the menu / commands
 - More thinking on improving code quality tool such as unit-test [/]
   - [X] Code refactoring functions
   - [ ] TDD functions
   - [ ] Code reading functions 
-- [X] Tag release version, make it available on melpa stable
+- More thinking on how to simplify the menu / commands
 
 ** Code quality
  
